--- a/src/app/components/admin/dashboard/dashboard.component.html
+++ b/src/app/components/admin/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
         </span>
 
         <div class="h-[calc(100%-112px)] p-5 bg-gray-100 rounded-lg shadow-md overflow-auto">
-            <p class="text-xl mt-1 mb-4">Ultimos envios de menu</p>
+            <p class="text-xl mt-1 mb-4">Ultimos envios de menú </p>
             <div class="grid justify-items-stretch grid-cols-3 sm:grid-cols-6 lg:grid-cols-12 gap-1">
                 <div *ngFor="let menuItem of menuItems" class="shadow-2xl">
                     <div [class]="menuItem.status">
