--- a/src/app/components/admin/navbar/navbar.component.html
+++ b/src/app/components/admin/navbar/navbar.component.html
@@ -12,8 +12,8 @@
                 <i class="ri-user-line"></i>
             </span>
             <div class="text-xs ml-1 pt-1">
-                <p class="font-semibold">Douglas Natha</p>
-                <p>Administrador</p>
+                <p class="font-semibold">{{getUser?.username}}</p>
+               
             </div>
         </div>
     </div>
