--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,7 +1,7 @@
-<section class="flex max-h-full flex-col justify-center px-6 py-12 lg:px-8">
+<section class="flex w-full max-h-full flex-col justify-center px-6 py-32 lg:px-8">
     <div>
         <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-            <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
+            <img class="mx-auto h-10 w-auto" src="https://assets.prod.deuna.io/assets/2bb258f4-051d-4a46-9321-b0a7a857cd71/kfc-logo-4712cdc128a8f9435acee236e7178eeb3efb61239732f0563e600f097703106d.png"
                 alt="Your Company">
             <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Iniciar Sesion</h2>
         </div>
@@ -40,10 +40,6 @@
                         Sesion</button>
                 </div>
             </form>
-            <!-- <p class="mt-10 text-center text-sm text-gray-500">
-            Not a member?
-            <a href="#" class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500">Start a 14 day free trial</a>
-        </p> -->
         </div>
 
     </div>
