--- a/src/app/components/admin/envio-menu/envio-menu.component.html
+++ b/src/app/components/admin/envio-menu/envio-menu.component.html
@@ -4,8 +4,8 @@
         <app-navbar></app-navbar>
 
         <span class="flex text-sm">
-            <i class="ri-home-2-line"></i>
-            <p>/Envio de Menu</p>
+            <i class="ri-file-list-3-line"></i>
+            <p>/Envio de Menú </p>
         </span>
 
         <div class="h-[calc(100%-112px)] p-5 bg-gray-100 rounded-lg shadow-md ">
@@ -83,8 +83,8 @@
                         }
                     </div>
                     } @else {
-                    <div class="w-full h-full flex items-center">
-                        <div class="basis-1/6 h-full flex flex-col">
+                    <div class="w-full h-full flex items-center animacion">
+                        <div class="basis-1/8 h-full flex flex-col">
                             <div class="w-full h-full border-l-8 border-sky-400"></div>
                             <div class="w-full h-full basis-1/6">
                                 <div class="triCat">
@@ -94,7 +94,7 @@
                             <div class="w-full h-full border-l-8 border-sky-400"></div>
                         </div>
                         <div class="w-full">
-                            Selecciona un menu
+                            <p class="text-3xl font-medium text-sky-400 text-center">Selecciona un menú</p>
                         </div>
                     </div>
                     }
@@ -113,11 +113,11 @@
                     </div>
                     <div class="w-full h-[calc(100%-110px)] overflow-auto">
                         @for (producto of listSelectableProducts.children; track producto) {
-                        <div class="m-1">
+                        <div class="m-1 w-full">
                             <mat-checkbox [checked]="producto.allCompleteSubProducto"
                                 [indeterminate]="someCompleteSubProductos(producto)"
                                 (change)="setAllSubProductos($event.checked, producto)" [(ngModel)]="producto.select"
-                                (ngModelChange)="updateAllCompleteProductos()">
+                                (ngModelChange)="updateAllCompleteProductos()" class="w-full flex justify-between">
                                 <div class="font-semibold text-sm">
                                     <p>{{producto.name}}</p>
                                 </div>
@@ -138,9 +138,9 @@
                         </div>
                         }
                     </div>
-                    } @else {
-                        <div class="w-full h-full flex items-center">
-                            <div class="basis-1/6 h-full flex flex-col">
+                    } @else if (showCategorias && !showProductos) {
+                        <div class="w-full h-full flex items-center animacion">
+                            <div class="basis-1/8 h-full flex flex-col">
                                 <div class="w-full h-full border-l-8 border-red-500"></div>
                                 <div class="w-full h-full basis-1/6">
                                     <div class="triProd">
@@ -150,7 +150,7 @@
                                 <div class="w-full h-full border-l-8 border-red-500"></div>
                             </div>
                             <div class="w-full">
-                                Selecciona un producto
+                                <p class="text-3xl font-medium text-red-500 text-center">Selecciona una categoria</p>
                             </div>
                         </div>
                     }
