--- a/src/app/components/shared/alert-info/alert-info.component.html
+++ b/src/app/components/shared/alert-info/alert-info.component.html
@@ -1,6 +1,6 @@
-<h2 mat-dialog-title>Error<h2>
+<h2 mat-dialog-title>{{title}}<h2>
 <mat-dialog-content class="rounded-full">
-   <p> El usuario o la contrasena ingresada son incorrectos</p>
+   <p>{{content}}</p>
 </mat-dialog-content>
 <mat-dialog-actions>
     <button mat-dialog-close>Entendido</button>
