--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,3 +1,4 @@
+<p-toast />
 <section class="flex w-full max-h-full flex-col justify-center px-6 py-32 lg:px-8">
     <div>
         <div class="sm:mx-auto sm:w-full sm:max-w-sm">
