--- a/src/app/components/admin/navbar/navbar.component.html
+++ b/src/app/components/admin/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<div class="w-full flex justify-between mb-4">
-    <div>
+<div class="w-full flex justify-between">
+    <div class="flex items-center">
         <input type="text" class="w-64 rounded-lg -mr-6 pl-3 pr-8 py-1" placeholder="Buscar">
         <button class="border-l pl-1"><i class="ri-search-line"></i></button>
     </div>
