Se almacena la configurtacion de envio de menu en localstorage

--- a/src/app/components/admin/envio-menu/envio-menu.component.html
+++ b/src/app/components/admin/envio-menu/envio-menu.component.html
@@ -87,7 +87,7 @@
                         </div>
                         }
                     </div>
-                    } @else {
+                    } @else if(!showCategorias && listSelectableMenu.children.length > 0) {
                     <div class="w-full h-full flex items-center animacion">
                         <div class="basis-1/8 h-full flex flex-col">
                             <div class="w-full h-full border-l-8 border-sky-400"></div>
