--- a/src/app/components/admin/envio-menu/envio-menu.component.html
+++ b/src/app/components/admin/envio-menu/envio-menu.component.html
@@ -1,3 +1,4 @@
+<p-toast />
 <div class="w-full h-full bg-gray-300 flex overflow-auto">
     <app-sidebar></app-sidebar>
     <div class="w-full h-full pt-2 md:-ml-12 pl-4 pr-4">
@@ -5,7 +6,7 @@
 
         <div class="example-button-rowcard flex flex-wrap gap-2 justify-content-center">
             <button mat-raised-button style="background-color: #147fa6f6;" mat-flat-button color="primary">SINCRONIZACION PERSONALIZADA (MAXPOINT)</button>
-            <button mat-raised-button style="background-color: #1fa44f;" mat-flat-button color="primary">SINCRONIZAR CON MAXPOINT</button>
+            <button mat-raised-button style="background-color: #1fa44f;" mat-flat-button color="primary" (click)="sincronizarMaxpoint()">SINCRONIZAR CON MAXPOINT</button>
         </div>
 
         <span class="flex text-sm mt-3">
