--- a/src/app/components/admin/dashboard/dashboard.component.html
+++ b/src/app/components/admin/dashboard/dashboard.component.html
@@ -2,24 +2,42 @@
     <app-sidebar></app-sidebar>
     <div class="w-full h-full pt-2 md:-ml-12 pl-4 pr-4">
         <app-navbar></app-navbar>
-        
+
         <span class="flex items-start text-sm">
             <i class="ri-home-2-line"></i>
             <p>/Dashboard</p>
         </span>
 
         <div class="h-[calc(100%-112px)] p-5 bg-gray-100 rounded-lg shadow-md overflow-auto">
-            <p class="text-xl mt-1 mb-4">Ultimos envios de menú </p>
-            <div class="grid justify-items-stretch grid-cols-3 sm:grid-cols-6 lg:grid-cols-12 gap-1">
-                <div *ngFor="let menuItem of menuItems" class="shadow-2xl">
-                    <div [class]="menuItem.status">
-                        <b>{{menuItem.rstName}}</b>
-                        <p>{{menuItem.channelName}}</p>
-                        <p><b>Status:</b> {{menuItem.status}}</p>
-                        <p><b>Fecha: </b>{{menuItem.createdAtFormat}}</p>
+
+            <div class="h-2/4">
+                <p class="text-xl mt-1 mb-4">Ultimos envios de menú </p>
+                <div class="grid justify-items-stretch grid-cols-3 sm:grid-cols-6 lg:grid-cols-12 gap-1">
+                    <div *ngFor="let menuItem of menuItems" class="shadow-2xl">
+                        <div [class]="menuItem.status">
+                            <b>{{menuItem.rstName}}</b>
+                            <p>{{menuItem.channelName}}</p>
+                            <p><b>Status:</b> {{menuItem.status}}</p>
+                            <p><b>Fecha: </b>{{menuItem.createdAtFormat}}</p>
+                        </div>
                     </div>
                 </div>
             </div>
+
+            <div class="h-2/4">
+                <p class="text-xl mt-1 mb-4">Sincronizaciones con Maxpoint</p>
+                <div class="grid justify-items-stretch grid-cols-3 sm:grid-cols-6 lg:grid-cols-12 gap-1">
+                    <div *ngFor="let menuItem of menuItems" class="shadow-2xl">
+                        <div [class]="menuItem.status" class="cursor-pointer" (click)="openMenuDetail()">
+                            <b>{{menuItem.rstName}}</b>
+                            <p>{{menuItem.channelName}}</p>
+                            <p><b>Status:</b> {{menuItem.status}}</p>
+                            <p><b>Fecha: </b>{{menuItem.createdAtFormat}}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
