se divide el dashboard en dos secciones y se refactoriza el consumo de los servicios en el filtro

--- a/src/app/components/admin/canal-envio/canal-envio.component.html
+++ b/src/app/components/admin/canal-envio/canal-envio.component.html
@@ -43,7 +43,7 @@
                 <div class="m-1">
                     <mat-checkbox [(ngModel)]="restaurante.select" (ngModelChange)="updateAllCompleteRestaurantes()">
                         <div class="border border-gray-300 py-1 px-5 text-xs">
-                            <p>{{restaurante.name}}</p>
+                            <p>{{restaurante.codeStore}}</p>
                         </div>
                     </mat-checkbox>
                 </div>
