--- a/src/app/components/admin/menu-detail/menu-detail.component.html
+++ b/src/app/components/admin/menu-detail/menu-detail.component.html
@@ -1,1 +1,20 @@
-<p>menu-detail works!</p>
+<mat-dialog-content>
+    <div class="h-full flex flex-col justify-between">
+        <div class="flex justify-between">
+            <p class="font-bold">ID:</p>
+            <p>12345678</p>
+        </div>
+        <div class="flex justify-between">
+            <p class="font-bold">STATUS:</p>
+            <p>Creado</p>
+        </div>
+        <div class="flex justify-between">
+            <p class="font-bold">Fecha Inicio:</p>
+            <p>01/01/2024</p>
+        </div>
+        <div class="flex justify-between">
+            <p class="font-bold">Fecha Fin:</p>
+            <p>01/01/2025</p>
+        </div>
+    </div>
+</mat-dialog-content>
